# CImakeshift

./: README.md  azure-pipelines-job-cmake.yml
azure-pipelines/: _cmake_cmake.yml  _cmake_run_cmake.yml  cmake.yml  cmake_detail_job.yml  cmake_detail_run_cmake.yml
ci/: CMakeLists.txt  azure-pipelines-secondary.yml  azure-pipelines.yml
ci/basic/: CMakeLists.txt  main.cpp
ci/basic/cmake/: TargetCompileSettings.cmake
ci/vcpkg-manifest/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
ci/vcpkg-manifest/cmake/: CommonPresets.json
ci/vcpkg-manifest/root/: vcpkg.json
